package io.github.example.devtrack.certification.domain.model;

public enum CertificationStatus {
  CONSIDERING,
  PREPARING,
  SCHEDULED,
  PASSED,
  FAILED,
  RETIRED
}
