package io.github.example.devtrack.certification.domain.model;

public enum ExamOutcome {
  PASSED,
  FAILED,
  ABSENT
}
