@startuml
title Certification Domain

skinparam classAttributeIconSize 0

package "certification.domain.model" {
  class Certification <<Aggregate Root>> {
    - id: CertificationId
    - qualificationName: QualificationName
    - relatedLearningGoalId: LearningGoalId
    - examPlan: ExamPlan
    - status: CertificationStatus
    - attempts: List<ExamAttempt>
    + relateToLearningGoal(learningGoalId)
    + scheduleExam(examPlan)
    + recordExamResult(attempt)
    + isPassed()
  }

  class ExamAttempt <<Entity>> {
    - id: ExamAttemptId
    - examDate: LocalDate
    - result: ExamResult
  }

  class CertificationId <<Value Object>>
  class ExamAttemptId <<Value Object>>
  class QualificationName <<Value Object>>
  class LearningGoalId <<External Identity>>
  class ExamPlan <<Value Object>>
  class ExamResult <<Value Object>>

  enum CertificationStatus {
    CONSIDERING
    PREPARING
    SCHEDULED
    PASSED
    FAILED
    RETIRED
  }

  enum ExamOutcome {
    PASSED
    FAILED
    ABSENT
  }
}

package "certification.domain.repository" {
  interface CertificationRepository {
    + save(certification)
    + findById(id)
    + findUpcomingExams(referenceDate)
  }
}

Certification *-- CertificationId
Certification *-- QualificationName
Certification o-- LearningGoalId : 任意の関連 goal
Certification *-- ExamPlan
Certification *-- CertificationStatus
Certification *-- "0..*" ExamAttempt
ExamAttempt *-- ExamAttemptId
ExamAttempt *-- ExamResult
ExamResult *-- ExamOutcome

CertificationRepository ..> Certification

note right of Certification
Type:
Aggregate Root

責務:
certification target、exam plan、exam attempt、certification status を管理する。

Aggregate boundary:
Certification とその ExamAttempt entities。

Invariant:
- qualificationName は空ではない
- 現在の planned exam date は最大 1 つ
- passed attempt は status を PASSED に変更する
- attempt は必ず 1 つの Certification に属する

Business Rule:
- scheduleExam() は planned exam date と status を設定する
- recordExamResult() は ExamAttempt を追加し、status を更新する
- Certification は任意で LearningGoalId を参照できる

依存:
Pure Java のみ。LearningGoalId は object reference ではなく external identity。

永続化:
ExamAttempt 子要素を含む 1 つの Certification aggregate として保存する。
end note

note right of ExamAttempt
Type:
Entity

責務:
Certification に対する 1 回の受験イベントを表現する。

Invariant:
- examDate は必須
- attempt を記録するとき result は必須

Business Rule:
Certification の外側に独立した lifecycle を持たない。

依存:
Pure Java のみ

永続化:
Certification aggregate の一部として永続化する。
end note

note bottom of CertificationRepository
Type:
Repository

責務:
Certification aggregate を永続化し、upcoming exam plan を照会する。

Business Rule:
aggregate の外側で Certification status を更新しない。

永続化:
infrastructure persistence adapter が実装する。
end note

@enduml
